# arepyextras-perturbations

./: MANIFEST.in  README.md  pyproject.toml
arepyextras/perturbations/: __init__.py
arepyextras/perturbations/atmospheric/: __init__.py  ionosphere.py  troposphere.py
arepyextras/perturbations/geodynamics/: __init__.py  plate_tectonics.py  solid_tides.py
arepyextras/perturbations/resources/: __init__.py
arepyextras/perturbations/resources/troposphere_support/: gridpoint_coord_1x1.txt  gridpoint_coord_5x5.txt
docs/source/: changelog.rst  conf.py  index.rst  install.rst
docs/source/reference/api/: atmospheric.rst  geodynamics.rst  index.rst
tests/: test_atmospheric_map_names_generation.py  test_ionosphere.py  test_plate_tectonics.py  test_solid_tides.py  test_troposphere.py
